reflibs/openpam/openpam.h

struct passwd;
/*
 * API extensions
 */
int
openpam_borrow_cred(pam_handle_t *_pamh,
	const struct passwd *_pwd)
	OPENPAM_NONNULL((1,2));
void
openpam_free_data(pam_handle_t *_pamh,
	void *_data,
	int _status);
void
openpam_free_envlist(char **_envlist);
const char *
openpam_get_option(pam_handle_t *_pamh,
	const char *_option);
int
openpam_restore_cred(pam_handle_t *_pamh)
	OPENPAM_NONNULL((1));
int
openpam_set_option(pam_handle_t *_pamh,
	const char *_option,
	const char *_value);
int
pam_error(const pam_handle_t *_pamh,
	const char *_fmt,
	...)
	OPENPAM_FORMAT ((__printf__, 2, 3))
	OPENPAM_NONNULL((1,2));
int
pam_get_authtok(pam_handle_t *_pamh,
	int _item,
	const char **_authtok,
	const char *_prompt)
	OPENPAM_NONNULL((1,3));
int
pam_info(const pam_handle_t *_pamh,
	const char *_fmt,
	...)
	OPENPAM_FORMAT ((__printf__, 2, 3))
	OPENPAM_NONNULL((1,2));
int
pam_setenv(pam_handle_t *_pamh,
	const char *_name,
	const char *_value,
	int _overwrite)
	OPENPAM_NONNULL((1,2,3));
/*
 * Generic conversation function
 */
struct pam_message;
struct pam_response;
# define PAM_SOEXT ".so"